Añadida capacidad de buscar por filtro de categoría